Add links to repositories in Development sections

--- a/journal/201804.md
+++ b/journal/201804.md
@@ -8,13 +8,13 @@ Wallet and node software version 1.2.0 has been released. Decrediton wallet high
 
 The release process has been improved. Instead of announcing a release date and trying to meet it, a Release Candidate 1 (RC1) will now be posted. After it has been tested an bugfixed with the help of the community, a second candidate (RC2) will be released. This is repeated until an RC version with no apparent bugs becomes the final release. The new process removes a ton of pressure from developers and users and gives more time for testing. As our primary consumer-facing product, Decrediton, is growing in features and complexity, more testing will be required for new releases.
 
-Politeia is "Getting close to a public beta of voting" ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1523623105000168)). Decred plugin [merged](https://github.com/decred/politeia/pull/242), paywall and voting are in the testing stage. Ticket voting [works](https://twitter.com/decredproject/status/984518284757221376) on testnet via CLI.
+[Politeia](https://github.com/decred/politeia) is "Getting close to a public beta of voting" ([slack](https://decred.slack.com/archives/C0NRMDVMJ/p1523623105000168)). Decred plugin [merged](https://github.com/decred/politeia/pull/242), paywall and voting are in the testing stage. Ticket voting [works](https://twitter.com/decredproject/status/984518284757221376) on testnet via CLI.
 
 Trezor support got closer as Decred patch [was merged](https://github.com/trezor/trezor-mcu/pull/274). Please note this is only firmware support, to be usable it also needs wallet integration.
 
 WooCommerce [Decred plugin](https://github.com/xifrat/decred-woocommerce-plugin) alpha version is ready for testing.
 
-Decred.org received a new sleek [exchanges page](https://www.decred.org/exchanges/).
+[decred.org](https://github.com/decred/dcrweb) received a new sleek [exchanges page](https://www.decred.org/exchanges/).
 
 The [contributors](https://www.decred.org/contributors/) page has been updated to add 10 new faces. Some of them are new to the project but others have been contributing for a while.
 
