--- a/journal/201805.md
+++ b/journal/201805.md
@@ -4,17 +4,17 @@
 
 ## Development
 
-dcrd: Significant [optimization](https://github.com/decred/dcrd/pull/1179) in signature hash calculation, bloom filters support was [removed](https://github.com/decred/dcrd/pull/1162), 2x faster startup thanks to in-memory [full block index](https://github.com/decred/dcrd/pull/1229), multipeer work [advancing](https://github.com/decred/dcrd/issues/1145), stronger [protection](https://github.com/decred/dcrd/pull/1235) against majority hashpower attacks. Additionally, code refactoring and cleanup, code and test infrastructure improvements.
+[dcrd](https://github.com/decred/dcrd): Significant [optimization](https://github.com/decred/dcrd/pull/1179) in signature hash calculation, bloom filters support was [removed](https://github.com/decred/dcrd/pull/1162), 2x faster startup thanks to in-memory [full block index](https://github.com/decred/dcrd/pull/1229), multipeer work [advancing](https://github.com/decred/dcrd/issues/1145), stronger [protection](https://github.com/decred/dcrd/pull/1235) against majority hashpower attacks. Additionally, code refactoring and cleanup, code and test infrastructure improvements.
 
-In dcrd and dcrwallet developers have been [experimenting](https://github.com/decred/dcrd/pull/1223) with new modular dependency and versioning schemes using vgo. @orthomind is seeking feedback for his work on [reproducible builds](https://github.com/decred/decred-binaries/pull/78).
+In dcrd and [dcrwallet](https://github.com/decred/dcrwallet) developers have been [experimenting](https://github.com/decred/dcrd/pull/1223) with new modular dependency and versioning schemes using vgo. @orthomind is seeking feedback for his work on [reproducible builds](https://github.com/decred/decred-binaries/pull/78).
 
-Decrediton: 1.2.1 bugfix [release](https://github.com/decred/decred-binaries/releases/tag/v1.2.1), work on SPV [has started](https://github.com/decred/decrediton/pull/1389), chart additions are in progress. Further simplification of the staking process is in the pipeline ([slack](https://decred.slack.com/archives/C5H9Z63AA/p1525528370000062)).
+[Decrediton](https://github.com/decred/decrediton): 1.2.1 bugfix [release](https://github.com/decred/decred-binaries/releases/tag/v1.2.1), work on SPV [has started](https://github.com/decred/decrediton/pull/1389), chart additions are in progress. Further simplification of the staking process is in the pipeline ([slack](https://decred.slack.com/archives/C5H9Z63AA/p1525528370000062)).
 
-Politeia: new [command line tool](https://github.com/decred/politeia/pull/267) to interact with Politeia API, general development is ongoing. Help with testing will soon be welcome: this [issue](https://github.com/decred/politeia/issues/265) sets out a test plan, join [#politeia](https://decred.slack.com/archives/C88HEA7DK) to follow progress and participate in testing.
+[Politeia](https://github.com/decred/politeia): new [command line tool](https://github.com/decred/politeia/pull/267) to interact with Politeia API, general development is ongoing. Help with testing will soon be welcome: this [issue](https://github.com/decred/politeia/issues/265) sets out a test plan, join [#politeia](https://decred.slack.com/archives/C88HEA7DK) to follow progress and participate in testing.
 
-dcrdata: work ongoing on [improved design](https://github.com/decred/dcrdata/issues/451), adding [more charts](https://github.com/decred/dcrdata/pull/463) and improving Insight API support.
+[dcrdata](https://github.com/decred/dcrdata): work ongoing on [improved design](https://github.com/decred/dcrdata/issues/451), adding [more charts](https://github.com/decred/dcrdata/pull/463) and improving Insight API support.
 
-Android: design work [advancing](https://github.com/decred/dcrandroid/issues/80).
+[Android](https://github.com/decred/dcrandroid): design work [advancing](https://github.com/decred/dcrandroid/issues/80).
 
 Decred's own DNS seeder ([dcrseeder](https://github.com/decred/dcrseeder)) was [released](https://twitter.com/decredproject/status/996442267538751488). It is written in Go and it properly supports service bit filtering, which will allow SPV nodes to find full nodes that support compact filters.
 
