--- a/journal/201806.md
+++ b/journal/201806.md
@@ -6,21 +6,21 @@
 
 The biggest announcement of the month was the new kind of decentralized exchange [proposed](https://blog.decred.org/2018/06/05/A-New-Kind-of-DEX/) by @jy-p of Company 0. The Community Discussions section considers the stakeholders' response.
 
-dcrd: Peer management and connectivity improvements. Some work for [improved sighash algo](https://github.com/decred/dcrd/issues/950). A new [optimization](https://github.com/decred/dcrd/pull/1273) that gives 3-4x faster serving of headers, which is great for SPV. This was another step towards multipeer parallel downloads – check [this issue](https://github.com/decred/dcrd/issues/1145) for a clear overview of progress and planned work for next months (and some engineering delight). As usual, codebase cleanup, improvements to error handling, test infrastructure and test coverage.
+[dcrd](https://github.com/decred/dcrd): Peer management and connectivity improvements. Some work for [improved sighash algo](https://github.com/decred/dcrd/issues/950). A new [optimization](https://github.com/decred/dcrd/pull/1273) that gives 3-4x faster serving of headers, which is great for SPV. This was another step towards multipeer parallel downloads – check [this issue](https://github.com/decred/dcrd/issues/1145) for a clear overview of progress and planned work for next months (and some engineering delight). As usual, codebase cleanup, improvements to error handling, test infrastructure and test coverage.
 
-Decrediton: work towards watching only wallets, lots of bugfixes and visual design improvements. Preliminary work to integrate SPV has begun.
+[Decrediton](https://github.com/decred/decrediton): work towards watching only wallets, lots of bugfixes and visual design improvements. Preliminary work to integrate SPV has begun.
 
-Politeia is live on testnet! Useful links: [announcement](https://twitter.com/marco_peereboom/status/1009552512968482818), [introduction](https://www.reddit.com/r/decred/comments/8sn1b8/test_the_politeia_proposal_system_on_testnet/), command line voting [example](https://gist.github.com/marcopeereboom/ee494a6864086e0b5a4ac8886a9c0397), [example proposal](https://test-proposals.decred.org/proposals/c5241806166d89286be56cd2605e7d76537eb32a40a8f8d8bde3bff4c2fc6585/) with some votes, [mini-guide](https://github.com/decred/politeia/blob/master/politeia.md) how to compose a proposal.
+[Politeia](https://github.com/decred/politeia) is live on testnet! Useful links: [announcement](https://twitter.com/marco_peereboom/status/1009552512968482818), [introduction](https://www.reddit.com/r/decred/comments/8sn1b8/test_the_politeia_proposal_system_on_testnet/), command line voting [example](https://gist.github.com/marcopeereboom/ee494a6864086e0b5a4ac8886a9c0397), [example proposal](https://test-proposals.decred.org/proposals/c5241806166d89286be56cd2605e7d76537eb32a40a8f8d8bde3bff4c2fc6585/) with some votes, [mini-guide](https://github.com/decred/politeia/blob/master/politeia.md) how to compose a proposal.
 
 Trezor: Decred appeared in the [firmware update](https://blog.trezor.io/june-updates-trezor-one-firmware-wallet-zcash-cashaddr-doge-e21cbdf9807d) and on [Trezor website](https://trezor.io/coins/#DCR), currently for testnet only. Next steps are mainnet support and integration in wallets. For the progress of Decrediton support you can track [this meta issue](https://github.com/decred/decrediton/issues/1491).
 
-dcrdata: Continued work on Insight API support, see this [meta issue](https://github.com/decred/dcrdata/issues/400) for progress overview. It is important for integrations due to its popularity. Ongoing work to add charts. A big database change to improve sorting on the Address page was [merged](https://github.com/decred/dcrdata/commit/006685be846ac9cfe7b9b76eebabdb7bffdaad18) and bumped version to 3.0. Work to visualize agenda voting [continues](https://github.com/decred/dcrdata/pull/523).
+[dcrdata](https://github.com/decred/dcrdata): Continued work on Insight API support, see this [meta issue](https://github.com/decred/dcrdata/issues/400) for progress overview. It is important for integrations due to its popularity. Ongoing work to add charts. A big database change to improve sorting on the Address page was [merged](https://github.com/decred/dcrdata/commit/006685be846ac9cfe7b9b76eebabdb7bffdaad18) and bumped version to 3.0. Work to visualize agenda voting [continues](https://github.com/decred/dcrdata/pull/523).
 
 Ticket splitting: 11-way ticket split from last month [has voted](https://twitter.com/matheusd_tech/status/1007610236868399104) ([transaction](https://explorer.dcrdata.org/tx/957728a7b3b9ea02338552470535ca67a6bc4379b169959589b8a69060e764a8)).
 
 Ethereum support in atomicswap is [progressing](https://github.com/decred/atomicswap/issues/74) and welcomes more eyeballs.
 
-decred.org: revamped [Press page](https://decred.org/press/) with dozens of added articles, and a shiny new [Roadmap page](https://decred.org/roadmap/).
+[decred.org](https://github.com/decred/dcrweb): revamped [Press page](https://decred.org/press/) with dozens of added articles, and a shiny new [Roadmap page](https://decred.org/roadmap/).
 
 [decredinfo.com](https://decredinfo.com/): a new Decred dashboard by lte13. Reddit announcement [here](https://old.reddit.com/r/decred/comments/8tcs49/decredinfo_block_explorer_and_statistics_for/).
 
