--- a/journal/201808.md
+++ b/journal/201808.md
@@ -62,7 +62,7 @@ Merchants:
 
 Attended:
 
-* {}
+* Taipei @morphymore's  report https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153360544050359hybnz:decred.org and photos https://photos.app.goo.gl/znay3MRCAjBY19QQ8
 
 Upcoming:
 
