Jul18: add marketing report link

--- a/journal/201807.md
+++ b/journal/201807.md
@@ -69,7 +69,7 @@ On the OTC trading front, @i2Rav from [i2trading](https://i2trading.com/) report
 
 # Marketing
 
-Targeted advertising report for June [released](https://www.reddit.com/r/decred/comments/8xgrv4/monthly_targeted_ads_report/). The July report will be posted shortly on [Reddit](https://www.reddit.com/r/decred/). As usual, reach @timhebel for full versions.
+Targeted advertising reports released for [June](https://www.reddit.com/r/decred/comments/8xgrv4/monthly_targeted_ads_report/) and [July](https://www.reddit.com/r/decred/comments/95eqno/july_monthly_advertising_reports/). As usual, reach @timhebel for full versions.
 
 > Big news in June: Facebook reversed their policy on banning crypto ads. ICO ads are still banned, but we should be OK. My team filled out the appeal today, so we should hopefully hear something within a few days. (u/timhebel on [reddit](https://www.reddit.com/r/decred/comments/8xgrv4/monthly_targeted_ads_report/))
 
