--- a/journal/201808.md
+++ b/journal/201808.md
@@ -4,15 +4,32 @@
 
 # Development
 
+dcrd:
+
+Release process was [changed](https://github.com/decred/dcrd/pull/1414) to use release branches and bump version on the master branch at the beginning of a release cycle. Discussed in [this chat](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153487143956936pmKTp:decred.org) on #dev.
+
+rc1 cli https://www.reddit.com/r/decred/comments/96b5dv/dcrd_version_130_release_candidate_1/
+decredition https://www.reddit.com/r/decred/comments/96ays0/decrediton_v130rc1_has_been_released/
+
 Testnet reset soon https://www.reddit.com/r/decred/comments/94ccce/psa_public_test_network_reset_in_upcoming_release/
+
+Continued migration to new module system, this time [in dcrwallet](https://github.com/decred/dcrwallet/pull/1238).
+
+@matheusd is looking for comments for his [proposal](https://github.com/decred/dcrd/issues/1412) to implement smart fee estimation, which is important for Lightning Network.
 
 Decrediton: https://github.com/decred/decrediton/pull/1557
 
+Politeia: [ability](https://github.com/decred/politeiagui/pull/515) to edit proposals, see [short demo](https://twitter.com/marco_peereboom/status/1032753235927425024). Architecture [diagram](https://twitter.com/oxfernando/status/1033390103534751746).
+
 @matheusd recorded a [video](https://www.youtube.com/watch?v=eysGWVhDFWY) for newcomer programmers that explains how tickets are selected for voting.
 
-dcrdata: v3.0 with new charts deployed to this test location: https://testnet-beta.dcrdata.org/charts
+dcrdata: v3.0 with new charts deployed to this test location: https://testnet-beta.dcrdata.org/charts more charting work https://github.com/decred/dcrdata/pull/598, mainnet explorer upgraded to version 2.1 https://explorer.dcrdata.org/ https://github.com/decred/dcrdata/compare/2.0...2.1
+
+docs: [introduced](https://www.reddit.com/r/decred/comments/9807gs/new_governance_section_and_politeia_page_on/) new [Governance](https://docs.decred.org/governance/governance/) section that hosts some old articles as well as the new [Politeia](https://docs.decred.org/governance/politeia/) page.
 
 @Richard-Red created a concept repository with policy documents that should only be changed with voter approval https://github.com/RichardRed0x/governance-docs
+
+[decredmarketcap.com](https://decredmarketcap.com/) is a brand new website that shows the most accurate DCR market data. Mobile friendly, no javascript required.
 
 Dev activity stats for {MONTH}: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
 
@@ -26,19 +43,31 @@ Nodes: {}
 
 {any interesting events}
 
+Some interesting analysis of the ticket system https://twitter.com/ImacallyouJawdy
+
 # ASICs
 
-{dig some from r/obeliskhq and #pow-mining}
+Obelisk posted has sent [email updates](https://us16.campaign-archive.com/home/?u=393b2698d17bdfe48ac0422ac&id=87ef82fd96) in August.
+
+compensation, blake fork https://us16.campaign-archive.com/?u=393b2698d17bdfe48ac0422ac&id=17e8f9480f
+
+https://twitter.com/Inno_Miner/status/1025189797239771136 http://www.innosilicon.com/html/d9+-miner/index.html
 
 http://www.innosilicon.com/html/news/27.html
+
+[FFMiner DS19](https://www.asicminervalue.com/miners/ffminer/ds19) claims 3.1 TH/s for Blake256R14 at 680 W and simultaneously 1.55 TH/s for Blake2B at 410 W, the price is [$1,299](https://www.akminer.com/all-products/new-double-mode-dcr-sc-asic-ds19-shipment-20-25th-aug). Shipping Aug 20-25.
+
+https://signatureit.org/products/decred-dcr-blake256r14-asic-46th-s-2200w-estimated-roi-6-months-30-day-after-electricity stats look close to Pangolin Whatsminer DCR.
 
 # Integrations
 
 {new mining and staking pools or news from existing ones}
 
+[www.d1pool.com](https://www.d1pool.com) a new [stakepool](https://decred.org/stakepools/)
+
 Exchange integrations:
 
-* {}
+* Australian CoinTree [listed](https://twitter.com/CointreeAus/status/1032887014029316097) DCR {AUD?}. The fees are 0 during the "Early access mode", more in the [blog](https://www.cointree.com/blog/new-coins-added-zcash-siacoin-steem-lisk-digibyte-and-more). On a related note, CoinTree is [working](https://www.cointree.com/blog/bill-payments-feature-coming-soon) on a feature to pay household bills with cryptocurrencies it supports.
 
 {new OTC}
 
@@ -49,6 +78,7 @@ Exchange integrations:
 Merchants:
 
 * https://twitter.com/BitDials_eu/status/1025116104765726720
+* [Sheldon Store](https://sheldon.store/) gift cards shop [re-enabled](https://twitter.com/sheldon_store/status/1029495686855839747) DCR payments
 
 {Decred blockchain applications}
 
@@ -63,25 +93,56 @@ Merchants:
 Attended:
 
 * Taipei @morphymore's  report https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153360544050359hybnz:decred.org and photos https://photos.app.goo.gl/znay3MRCAjBY19QQ8
+* @davesaddress https://twitter.com/ybfventures/status/1026625236605648896
+* okex ([video](https://www.pscp.tv/w/bjwUMTFlUkV4RHJlbVZ2RXd8MXlvSk1WcW93bFJ4Ub3nChi87d8sJHHV34WUH6j4YPs5gPEkfQ_l47RZfdny), [photo](https://twitter.com/okex_/status/1027549269685821442)
+* [Blockchain & Decentralised Governance Panel](https://www.meetup.com/Blockchain-for-Social-Impact-Melbourne-BSIMelb/events/253050277/) in Melbourne, Australia. Hosted by ybf, report by @eSizeDave https://riot.im/app/#/room/!aNPTuiryMFmdMQWUzb:decred.org/$153416249853777aAeVg:decred.org (photos: [1](https://twitter.com/davesaddress/status/1028981542343700480) [2](https://twitter.com/rosathethompson/status/1028946211670188032))
+* Meetup in Melbourne, Australia. @joshuam discussed Decred with U.K. Minister for International Trade, [@grahamstuart](https://twitter.com/grahamstuart) ([news](http://www.decred.com.au/news/uk-investment-minister-gets-acquainted-with-decred-in-australia), [photos](https://twitter.com/joshuam_/status/1031413840133611520)) {event link?}
+* https://twitter.com/ummjackson/status/1031475035385393152 {what event? link?}
+* Blockchain Futurist Conference in Toronto, Canada. ([photo](https://twitter.com/KennethBosak/status/1029783885465497601))
+* [Voice of Blockchain](https://chicagoblockchainproject.com/voice-of-blockchain/) in Chicago, USA on Aug 24-25. {two panels, marco and alex}. Check this [video interview](https://www.youtube.com/watch?v=NpdNgSCK86c) with Marco Peereboom {and this vid with jimmy et al} (photos: [1](https://twitter.com/BlockchainVoice/status/1033119483378970624), [2](https://twitter.com/marco_peereboom/status/1033365545146621952), [3](https://twitter.com/Sicarious_/status/1033107625913790465))
+* Blockchain APAC https://www.blockchainapac.com.au/ Melbourne, AU, Aug 29, @joshuam {confirm}
 
 Upcoming:
 
 * {}
 
+For those willing to help with the events:
+
+> BAB: Hey all, we are gearing up for conference season. I have a list of places we hope to attend but need to know who besides @joshuam and @Haon are willing to do public speaking, willing to work booths, or help out at them? You will need to be well versed on not just what is Decred, but the history of Decred etc... DM me if you are interested. ([#event_planning](https://riot.im/app/#/room/!aNPTuiryMFmdMQWUzb:decred.org/$153496620157501qRsIH:decred.org))
+
 # Media
 
 DA 21 https://twitter.com/decredproject/status/1026546648103628800
 
+A new Decred-focused website was launched, meet [decred.com.au](http://www.decred.com.au/). First two posts are live in the [news](http://www.decred.com.au/news) section. Also check out [@DecredAustralia](https://twitter.com/DecredAustralia) on Twitter.
+
 https://stakey.club/en/decrediton-setup/
+
+Decred scored \#32 in the [August issue](https://archive.today/W3cOd) of CCID ratings. The evaluation model was explained in [this interview](https://medium.com/@coinness/coinness-exclusive-interview-with-pu-songtao-discover-ccid-global-public-chain-tech-evaluation-d570af55fd89).
+
+Featured:
+
+* https://medium.com/decred/decred-investor-interviews-ciarán-oleary-general-partner-blueyard-capital-592a23ec53f2
+* https://medium.com/crypto-oracle/is-decred-worth-my-time-and-money-20e2a46164bb
 
 Articles:
 
+* https://nulltx.com/the-3-best-performing-cryptocurrencies-in-2018/ (missed in July issue)
 * nl https://currentcrypto.nl/wat-is-decred/
 * Decred overview (Japanese, [cryptocoinportal.jp](http://cryptocoinportal.jp/kind/decred/), note: Decred's Coco is Amazing, according to [Google Translate](https://translate.google.com/translate?sl=auto&tl=en&hl=en&u=http%3A%2F%2Fcryptocoinportal.jp%2Fkind%2Fdecred%2F))
+* Decred Review ([vivecrypto.com](https://www.vivecrypto.com/decred))
+* What is Dark Red (Decred)? (Japanese, [billion-coin.jp](https://billion-coin.jp/decred/))
+* Decred is the neglected gem among altcoins ([captainaltcoin.com](https://captainaltcoin.com/decred-dcr-is-the-neglected-gem-among-altcoins/))
+* https://medium.com/nodeblockchain/decred-dcr-update-research-report-83f14577ff25
+* What are the characteristics of Decred where to buy? (Japanese, [motto-money.com](https://motto-money.com/decred/))
+* What is Hybrid Virtual Currency Decred? Explanation of features and future potential (Japanese, [investor-a.com](http://investor-a.com/18477))
+* https://www.investinblockchain.com/top-cryptocurrencies-working-products/
+* https://cryptobriefing.com/what-is-dcr-introduction-to-decred/
 
 Videos:
 
 * https://decentralized.tv/top-3-coins-crushing-it-in-2018-so-far-decred-vechain-binance-coin/ http://youtube.com/watch?v=NwY6K9om37I
+* Decred review - The Ultimate Money Guide https://www.youtube.com/watch?v=qb9amC_Wch0
 
 # Community Discussions
 
@@ -92,17 +153,34 @@ Community stats:
 * Slack users {} (+{})
 * GitHub {} stars and {} forks of dcrd repository
 
-{meta: updates on comm systems}
+Comm systems news:
 
-Reddit and forum: Decred [cons](https://www.reddit.com/r/decred/comments/94ivq5/decred_cons/).
+* Some interruptions in the chat bridge led to Slack messages not reaching other systems, and eventually not archived in Matrix.
+* Matrix community was created: [+decred:decred.org](https://matrix.to/#/+decred:decred.org). A community is a group of rooms and people.
+* Several community members mentioned [Mastodon](https://en.wikipedia.org/wiki/Mastodon_%28software%29) as a viable alternative for Twitter. Worth researching.
 
-Chats: [plans](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153317267348142YycAs:decred.org) for contractor management system, lower-level decision making and contractor privacy vs transparency for stakeholders; [measuring](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153322272548457woVQD:decred.org) dev activity; [what if](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153323190548584msxmU:decred.org) the network stalls, multiple implementations of Decred for more resilience, long term vision behind those extensive tests and accurate comments in the codebase; [ideas](https://view.matrix.org/room/!tIDEIWechmqCLjPiui:decred.org/?anchor=$153327965848850tWxIW:decred.org) for workflow for policy and process documents, including ticket voting to approve their changes.
+Highlights:
+
+* A [thread](https://www.reddit.com/r/decred/comments/95r578/proposed_changes_to_decred_jargon/) was started to discuss changes to Decred jargon (e.g. "tickets", "staking", "stakepools") in hopes to make it more consistent and accessible to newcomers. Also discussed on #documentation channel https://decred.slack.com/archives/C4BS83W3Z/p1534333936000100 and some activity on github https://github.com/decred/dcrdocs/issues
+* [Discussion](https://github.com/decred/dcrweb/issues/316) is open to remove advisors from the website.
+* Project fund transparency was extensively discussed on [Reddit](https://www.reddit.com/r/decred/comments/96j9ai/transparency_in_payments_made_with_the_community/) and in [#general](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153410896753432nExMw:decred.org).
+* Several people began testing Matrix.
+
+Reddit and Forum: Decred [cons](https://www.reddit.com/r/decred/comments/94ivq5/decred_cons/).
+
+Chats: [plans](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153317267348142YycAs:decred.org) for contractor management system, lower-level decision making and contractor privacy vs transparency for stakeholders; [measuring](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153322272548457woVQD:decred.org) dev activity; [what if](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153323190548584msxmU:decred.org) the network stalls, multiple implementations of Decred for more resilience, long term vision behind those extensive tests and accurate comments in the codebase; [ideas](https://view.matrix.org/room/!tIDEIWechmqCLjPiui:decred.org/?anchor=$153327965848850tWxIW:decred.org) for workflow for policy and process documents, including ticket voting to approve their changes; [odds](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153378940451742eumld:decred.org) of a wallet to fetch a wrong block in SPV; new [module system](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153385446352375nNCzg:decred.org) in Go; [why](https://riot.im/app/#/room/!NNzHoaSdnsbZDQOXJr:decred.org/$153409911653370oCvhJ:decred.org) PoW algo change proposal must be specified in great detail; [thoughts](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153432628255090APtWJ:decred.org) about [NIPoPoWs](https://eprint.iacr.org/2017/963) and SPV; Decred vs Dash treasury and marketing [expenses]({}), spending other people's money (yes, on #trading!), [overview]({https://riot.im/app/#/room/!OfChXgczrIlpEZSFAv:decred.org/$153490307657191zOrLq:decred.org}) of Korean exchanges.
 
 An unusual event was the discussion of double negatives and other oddities in languages in [#trading](https://view.matrix.org/room/!zxBsqZRxjbQoLqJRwe:decred.org/?anchor=$153316263048081XBMww:decred.org).
+
+\#governance is growing and never stops producing high quality conversations.
 
 # Markets
 
 {markets overview: USD and BTC prices, highs and lows, interesting events}
+
+Aug 14 huge drop everywhere, top 100 cryptos lost ~5-30%, Bitcoin went below 6k and the overall market below 200b, according to cmc. All together with Bitcoin dominance to 53%+. Decred lost ~17% and dropped to 0.0056 BTC and 33 USD.
+
+Around Aug 24, Huobi showed a trading volume $5m+ for DCR.
 
 # Relevant External
 
@@ -115,6 +193,14 @@ An unusual event was the discussion of double negatives and other oddities in la
 Reddit [was hacked](https://www.wired.com/story/reddit-hacked-thanks-to-woefully-insecure-two-factor-setup/) by intercepting 2FA codes sent via SMS. The [announcement](https://www.reddit.com/r/announcements/comments/93qnm5/we_had_a_security_incident_heres_what_you_need_to/) explains the impact. Yet another [data breach](https://en.wikipedia.org/wiki/List_of_data_breaches) suggests to think twice before sharing any data with any company and shift to more secure authentication systems.
 
 {ASIC resistance buzzword article by stopanddecrypt}
+
+Vietnam ban mining equipment import https://icobrothers.media/2018/08/14/vietnamese-authorities-have-officially-banned-mining-equipment-import/
+
+Medium cc policy https://help.medium.com/hc/en-us/articles/360000646167-Cryptocurrencies-on-Medium triggering one cc project to migrate to ghost https://blog.aragon.org/aragon-against-censorship-goodbye-medium-hello-ghost/
+
+Intel and x86 dumpsterfire [keeps burning](https://marc.info/?l=openbsd-tech&m=153504937925732&w=2) brighter. Seek for more secure hardware and OS for your coins.
+
+Finally, almost unrelated to Decred but too good to not share: [yetanotherico.com](http://yetanotherico.com/).
 
 # About This Issue
 
