--- a/journal/201808.md
+++ b/journal/201808.md
@@ -4,32 +4,35 @@
 
 # Development
 
-dcrd:
+[dcrd](https://github.com/decred/dcrd): Version 1.3.0 RC1 (Release Candidate 1) is out! The biggest news of this release are significant performance improvements, including some that benefit SPV clients. Full release notes and downloads are [on GitHub](https://github.com/decred/decred-binaries/releases/tag/v1.3.0-rc1).
 
 Release process was [changed](https://github.com/decred/dcrd/pull/1414) to use release branches and bump version on the master branch at the beginning of a release cycle. Discussed in [this chat](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153487143956936pmKTp:decred.org) on #dev.
 
-rc1 cli https://www.reddit.com/r/decred/comments/96b5dv/dcrd_version_130_release_candidate_1/
-decredition https://www.reddit.com/r/decred/comments/96ays0/decrediton_v130rc1_has_been_released/
+The codebase is ready for the new Go 1.11 version. Migration to vgo module system is complete and the 1.4.0 release will be built using modules. The list of versioned modules and a hierarchy diagram are available [here](https://github.com/decred/dcrd/blob/master/docs/README.md).
 
-Testnet reset soon https://www.reddit.com/r/decred/comments/94ccce/psa_public_test_network_reset_in_upcoming_release/
+Comments are welcome for the [proposal](https://github.com/decred/dcrd/issues/1412) to implement smart fee estimation, which is important for Lightning Network.
 
-Continued migration to new module system, this time [in dcrwallet](https://github.com/decred/dcrwallet/pull/1238).
+The testnet was reset and bumped to version 3.
 
-@matheusd is looking for comments for his [proposal](https://github.com/decred/dcrd/issues/1412) to implement smart fee estimation, which is important for Lightning Network.
+@matheusd recorded a code review [video](https://www.youtube.com/watch?v=eysGWVhDFWY) for newcomer programmers that explains how tickets are selected for voting.
 
-Decrediton: https://github.com/decred/decrediton/pull/1557
+[dcrwallet](https://github.com/decred/dcrwallet): Version [1.3.0 RC1](https://github.com/decred/decred-binaries/releases/tag/v1.3.0-rc1) features new SPV sync mode, new ticket buyer, new APIs for Decrediton and a host of bug fixes. On the dev side, dcrwallet also [migrated](https://github.com/decred/dcrwallet/pull/1238) to the new module system.
 
-Politeia: [ability](https://github.com/decred/politeiagui/pull/515) to edit proposals, see [short demo](https://twitter.com/marco_peereboom/status/1032753235927425024). Architecture [diagram](https://twitter.com/oxfernando/status/1033390103534751746).
+[Decrediton](https://github.com/decred/decrediton): Version [1.3.0 RC1](https://github.com/decred/decred-binaries/releases/tag/v1.3.0-rc1) adds the new SPV sync mode that syncs rougly 5x faster. The feature is off by default while it receives more testing and feedback from experienced users. Other notable changes are design polish and experimental Politeia integration.
 
-@matheusd recorded a [video](https://www.youtube.com/watch?v=eysGWVhDFWY) for newcomer programmers that explains how tickets are selected for voting.
+[Politeia](https://github.com/decred/politeia): an important feature required for the release is the ability to edit proposals, is now [in development](https://github.com/decred/politeiagui/pull/515) and has [short demo](https://twitter.com/marco_peereboom/status/1032753235927425024). Developers might like this [architecture diagram](https://twitter.com/oxfernando/status/1033390103534751746).
 
-dcrdata: v3.0 with new charts deployed to this test location: https://testnet-beta.dcrdata.org/charts more charting work https://github.com/decred/dcrdata/pull/598, mainnet explorer upgraded to version 2.1 https://explorer.dcrdata.org/ https://github.com/decred/dcrdata/compare/2.0...2.1
+@degeri joined to perform security testing of Politeia and found [several](https://github.com/decred/politeia/issues/414) [issues](https://github.com/decred/politeiagui/issues/501).
 
-docs: [introduced](https://www.reddit.com/r/decred/comments/9807gs/new_governance_section_and_politeia_page_on/) new [Governance](https://docs.decred.org/governance/governance/) section that hosts some old articles as well as the new [Politeia](https://docs.decred.org/governance/politeia/) page.
+[dcrdata](https://github.com/decred/dcrdata): mainnet explorer upgraded to v2.1 with several new features. For users: credit/debit tx filter on address page, showing miner fees on coinbase transaction page, estimate yearly ticket rewards on [main page](https://explorer.dcrdata.org/), cool new hamburger menu and keyboard navigation. For developers: new [chain parameters](https://explorer.dcrdata.org/parameters) page, experimental Insight API support, endpoints for coin supply and block rewards, testnet3 support. Lots of minor API changes and frontend tweaks, many bug fixes and robustness improvements.
 
-@Richard-Red created a concept repository with policy documents that should only be changed with voter approval https://github.com/RichardRed0x/governance-docs
+The upcoming v3.0 entered beta and is deployed on [beta.dcrdata.org](https://beta.dcrdata.org/). Check out the new [charts](https://beta.dcrdata.org/charts) page. Feedback and bug reports are appreciated. Finally, the development version v3.1.0-pre is on [alpha.dcrdata.org](https://alpha.dcrdata.org/).
 
-[decredmarketcap.com](https://decredmarketcap.com/) is a brand new website that shows the most accurate DCR market data. Mobile friendly, no javascript required.
+[docs](https://github.com/decred/dcrdocs): [introduced](https://www.reddit.com/r/decred/comments/9807gs/new_governance_section_and_politeia_page_on/) new [Governance](https://docs.decred.org/governance/governance/) section that grouped some old articles as well as the new [Politeia](https://docs.decred.org/governance/politeia/) page.
+
+@Richard-Red created a [concept repository](https://github.com/RichardRed0x/governance-docs) with policy documents that should only be changed with voter approval.
+
+[decredmarketcap.com](https://decredmarketcap.com/) is a brand new website that shows the most accurate DCR market data. Clean design, mobile friendly, no javascript required.
 
 Dev activity stats for {MONTH}: {} active PRs, {} master commits, {} added and {} deleted lines spread across {} repositories. Contributions came from {}-{} developers per repository. ([chart]({}))
 
@@ -158,6 +161,8 @@ Comm systems news:
 * Some interruptions in the chat bridge led to Slack messages not reaching other systems, and eventually not archived in Matrix.
 * Matrix community was created: [+decred:decred.org](https://matrix.to/#/+decred:decred.org). A community is a group of rooms and people.
 * Several community members mentioned [Mastodon](https://en.wikipedia.org/wiki/Mastodon_%28software%29) as a viable alternative for Twitter. Worth researching.
+* Some inactive Slack channels were archived.
+* Two new [rules](https://www.reddit.com/r/decred/about/rules/) added on Reddit to prevent CAPS flood and duplicate submissions.
 
 Highlights:
 
