--- a/journal/201808.md
+++ b/journal/201808.md
@@ -6,7 +6,7 @@
 
 [dcrd](https://github.com/decred/dcrd): Version 1.3.0 RC1 (Release Candidate 1) is out! The biggest news of this release are significant performance improvements, including some that benefit SPV clients. Full release notes and downloads are [on GitHub](https://github.com/decred/decred-binaries/releases/tag/v1.3.0-rc1).
 
-Release process was [changed](https://github.com/decred/dcrd/pull/1414) to use release branches and bump version on the master branch at the beginning of a release cycle. Discussed in [this chat](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153487143956936pmKTp:decred.org) on #dev.
+Release process was [changed](https://github.com/decred/dcrd/pull/1414) to use release branches and bump version on the master branch at the beginning of a release cycle. Discussed in [this chat](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153487143956936pmKTp:decred.org).
 
 The codebase is ready for the new Go 1.11 version. Migration to vgo module system is complete and the 1.4.0 release will be built using modules. The list of versioned modules and a hierarchy diagram are available [here](https://github.com/decred/dcrd/blob/master/docs/README.md).
 
@@ -31,6 +31,8 @@ The upcoming v3.0 entered beta and is deployed on [beta.dcrdata.org](https://bet
 [docs](https://github.com/decred/dcrdocs): [introduced](https://www.reddit.com/r/decred/comments/9807gs/new_governance_section_and_politeia_page_on/) new [Governance](https://docs.decred.org/governance/governance/) section that grouped some old articles as well as the new [Politeia](https://docs.decred.org/governance/politeia/) page.
 
 @Richard-Red created a [concept repository](https://github.com/RichardRed0x/governance-docs) with policy documents that should only be changed with voter approval.
+
+[decred.org](https://github.com/decred/dcrweb): 8 new faces added to [Contributors](https://decred.org/contributors/) page and 1 removed, several OTC desks added to [Exchanges](https://decred.org/exchanges/) page.
 
 [decredmarketcap.com](https://decredmarketcap.com/) is a brand new website that shows the most accurate DCR market data. Clean design, mobile friendly, no javascript required.
 
@@ -116,8 +118,6 @@ For those willing to help with the events:
 # Media
 
 DA 21 https://twitter.com/decredproject/status/1026546648103628800
-
-A new Decred-focused website was launched, meet [decred.com.au](http://www.decred.com.au/). First two posts are live in the [news](http://www.decred.com.au/news) section. Also check out [@DecredAustralia](https://twitter.com/DecredAustralia) on Twitter.
 
 https://stakey.club/en/decrediton-setup/
 
