--- a/journal/201808.md
+++ b/journal/201808.md
@@ -101,9 +101,9 @@ Merchants:
 
 Attended:
 
-* Taipei @morphymore's  report https://view.matrix.org/room/!aNPTuiryMFmdMQWUzb:decred.org/?anchor=$153360544050359hybnz:decred.org and photos https://photos.app.goo.gl/znay3MRCAjBY19QQ8
+* Taipei @morphymore's report https://riot.im/app/#/room/!aNPTuiryMFmdMQWUzb:decred.org/$153360544050359hybnz:decred.org and photos https://photos.app.goo.gl/znay3MRCAjBY19QQ8
 * @davesaddress https://twitter.com/ybfventures/status/1026625236605648896
-* okex ([video](https://www.pscp.tv/w/bjwUMTFlUkV4RHJlbVZ2RXd8MXlvSk1WcW93bFJ4Ub3nChi87d8sJHHV34WUH6j4YPs5gPEkfQ_l47RZfdny), [photo](https://twitter.com/okex_/status/1027549269685821442)
+* OKEx ([video](https://www.pscp.tv/w/bjwUMTFlUkV4RHJlbVZ2RXd8MXlvSk1WcW93bFJ4Ub3nChi87d8sJHHV34WUH6j4YPs5gPEkfQ_l47RZfdny), [photo](https://twitter.com/okex_/status/1027549269685821442))
 * [Blockchain & Decentralised Governance Panel](https://www.meetup.com/Blockchain-for-Social-Impact-Melbourne-BSIMelb/events/253050277/) in Melbourne, Australia. Hosted by ybf, report by @eSizeDave https://riot.im/app/#/room/!aNPTuiryMFmdMQWUzb:decred.org/$153416249853777aAeVg:decred.org (photos: [1](https://twitter.com/davesaddress/status/1028981542343700480) [2](https://twitter.com/rosathethompson/status/1028946211670188032))
 * Meetup in Melbourne, Australia. @joshuam discussed Decred with U.K. Minister for International Trade, [@grahamstuart](https://twitter.com/grahamstuart) ([news](http://www.decred.com.au/news/uk-investment-minister-gets-acquainted-with-decred-in-australia), [photos](https://twitter.com/joshuam_/status/1031413840133611520)) {event link?}
 * https://twitter.com/ummjackson/status/1031475035385393152 {what event? link?}
@@ -178,9 +178,9 @@ Highlights:
 
 Reddit and Forum: Decred [cons](https://www.reddit.com/r/decred/comments/94ivq5/decred_cons/).
 
-Chats: [plans](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153317267348142YycAs:decred.org) for contractor management system, lower-level decision making and contractor privacy vs transparency for stakeholders; [measuring](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153322272548457woVQD:decred.org) dev activity; [what if](https://view.matrix.org/room/!MgQoetFiyjrHAywokv:decred.org/?anchor=$153323190548584msxmU:decred.org) the network stalls, multiple implementations of Decred for more resilience, long term vision behind those extensive tests and accurate comments in the codebase; [ideas](https://view.matrix.org/room/!tIDEIWechmqCLjPiui:decred.org/?anchor=$153327965848850tWxIW:decred.org) for workflow for policy and process documents, including ticket voting to approve their changes; [odds](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153378940451742eumld:decred.org) of a wallet to fetch a wrong block in SPV; new [module system](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153385446352375nNCzg:decred.org) in Go; [why](https://riot.im/app/#/room/!NNzHoaSdnsbZDQOXJr:decred.org/$153409911653370oCvhJ:decred.org) PoW algo change proposal must be specified in great detail; [thoughts](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153432628255090APtWJ:decred.org) about [NIPoPoWs](https://eprint.iacr.org/2017/963) and SPV; Decred vs Dash treasury and marketing [expenses]({}), spending other people's money (yes, on #trading!), [overview]({https://riot.im/app/#/room/!OfChXgczrIlpEZSFAv:decred.org/$153490307657191zOrLq:decred.org}) of Korean exchanges.
+Chats: [plans](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153317267348142YycAs:decred.org) for contractor management system, lower-level decision making and contractor privacy vs transparency for stakeholders; [measuring](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153322272548457woVQD:decred.org) dev activity; [what if](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153323190548584msxmU:decred.org) the network stalls, multiple implementations of Decred for more resilience, long term vision behind those extensive tests and accurate comments in the codebase; [ideas](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153327965848850tWxIW:decred.org) for workflow for policy and process documents, including ticket voting to approve their changes; [odds](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153378940451742eumld:decred.org) of a wallet to fetch a wrong block in SPV; new [module system](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153385446352375nNCzg:decred.org) in Go; [why](https://riot.im/app/#/room/!NNzHoaSdnsbZDQOXJr:decred.org/$153409911653370oCvhJ:decred.org) PoW algo change proposal must be specified in great detail; [thoughts](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153432628255090APtWJ:decred.org) about [NIPoPoWs](https://eprint.iacr.org/2017/963) and SPV; Decred vs Dash treasury and marketing [expenses]({}), spending other people's money (yes, on #trading!), [overview]({https://riot.im/app/#/room/!OfChXgczrIlpEZSFAv:decred.org/$153490307657191zOrLq:decred.org}) of Korean exchanges.
 
-An unusual event was the discussion of double negatives and other oddities in languages in [#trading](https://view.matrix.org/room/!zxBsqZRxjbQoLqJRwe:decred.org/?anchor=$153316263048081XBMww:decred.org).
+An unusual event was the discussion of double negatives and other oddities in languages in [#trading](https://riot.im/app/#/room/!zxBsqZRxjbQoLqJRwe:decred.org/$153316263048081XBMww:decred.org).
 
 \#governance is growing and never stops producing high quality conversations.
 
