--- a/journal/201808.md
+++ b/journal/201808.md
@@ -169,10 +169,13 @@ Community stats:
 
 Comm systems news:
 
-* Some interruptions in the chat bridge led to Slack messages not reaching other systems, and eventually not archived in Matrix.
-* Matrix community was created: [+decred:decred.org](https://matrix.to/#/+decred:decred.org). A community is a group of rooms and people.
-* Several community members mentioned [Mastodon](https://en.wikipedia.org/wiki/Mastodon_%28software%29) as a viable alternative for Twitter. Worth researching.
-* Several inactive Slack channels were archived. Please report to admins any channels you miss.
+* Interruptions in the chat bridge led to some Slack messages not reaching other platforms, and eventually not archived in Matrix.
+* Several impersonators were detected and banned.
+* After yet another debate about chat system several people began testing and using Matrix, leading to some gardening on that platform:
+  * Decred Matrix community was created: [+decred:decred.org](https://matrix.to/#/+decred:decred.org), it now helps to locate all Decred-related rooms.
+  * Room avatars were set.
+* Inactive Slack channels were archived. Please report to admins any channels you miss.
+* [Mastodon](https://en.wikipedia.org/wiki/Mastodon_%28software%29) was mentioned by several people as a viable alternative for Twitter.
 * Two new Reddit [rules](https://www.reddit.com/r/decred/about/rules/) were added to prevent CAPS flood and duplicate submissions.
 
 Highlights:
@@ -180,15 +183,38 @@ Highlights:
 * A [thread](https://www.reddit.com/r/decred/comments/95r578/proposed_changes_to_decred_jargon/) was started to discuss changes to Decred jargon (e.g. "tickets", "staking", "stakepools") in hopes to make it more consistent and accessible to newcomers. Also discussed on #documentation channel https://riot.im/app/#/room/!tfqymymiNgzSUJTHqS:decred.org/$1535386492135ZGULG:decred.org (only part was saved in matrix) and some activity on github https://github.com/decred/dcrdocs/issues 
 * [Discussion](https://github.com/decred/dcrweb/issues/316) is open to remove advisors from the website.
 * Project fund transparency was extensively discussed on [Reddit](https://www.reddit.com/r/decred/comments/96j9ai/transparency_in_payments_made_with_the_community/) and in [#general](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153410896753432nExMw:decred.org).
-* Several people began testing Matrix.
 
 Reddit and Forum: Decred [cons](https://www.reddit.com/r/decred/comments/94ivq5/decred_cons/).
 
-Chats: [plans](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153317267348142YycAs:decred.org) for contractor management system, lower-level decision making and contractor privacy vs transparency for stakeholders; [measuring](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153322272548457woVQD:decred.org) dev activity; [what if](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153323190548584msxmU:decred.org) the network stalls, multiple implementations of Decred for more resilience, long term vision behind those extensive tests and accurate comments in the codebase; [ideas](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153327965848850tWxIW:decred.org) for workflow for policy and process documents, including ticket voting to approve their changes; [odds](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153378940451742eumld:decred.org) of a wallet to fetch a wrong block in SPV; new [module system](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153385446352375nNCzg:decred.org) in Go; [why](https://riot.im/app/#/room/!NNzHoaSdnsbZDQOXJr:decred.org/$153409911653370oCvhJ:decred.org) PoW algo change proposal must be specified in great detail; [thoughts](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153432628255090APtWJ:decred.org) about [NIPoPoWs](https://eprint.iacr.org/2017/963) and SPV; Decred vs Dash treasury and marketing [expenses]({}), spending other people's money (yes, on #trading!), [overview](https://riot.im/app/#/room/!OfChXgczrIlpEZSFAv:decred.org/$153490307657191zOrLq:decred.org) of Korean exchanges.
+Chats:
 
-An unusual event was the discussion of double negatives and other oddities in languages in [#trading](https://riot.im/app/#/room/!zxBsqZRxjbQoLqJRwe:decred.org/$153316263048081XBMww:decred.org).
+cross-chain [trading](https://riot.im/app/#/room/!MfifnUCLrfSeRkMDwZ:decred.org/$153315325947965TiRLy:decred.org) via LN;  
+[plans](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153317267348142YycAs:decred.org) for contractor management system, lower-level decision making and contractor privacy vs transparency for stakeholders;  
+[measuring](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153322272548457woVQD:decred.org) dev activity;  
+[what if](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153323194548585HHCQS:decred.org) the network stalls, multiple implementations of Decred for more resilience, long term vision behind those extensive tests and accurate comments in the codebase;  
+[ideas](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153327969148851WDEWg:decred.org) for process for policy documents, hosting them in Pi and approving with ticket voting;  
+[about](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$1533582725405DqzDt:zettaport.com) SPV wallet disk size, how compact filters work;  
+[odds](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153378940451742eumld:decred.org) of a wallet to fetch a wrong block in SPV;  
+new [module system](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153385446352375nNCzg:decred.org) in Go;  
+[security](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153394851052869tucYe:decred.org) of allowing Android app backups;  
+[why](https://riot.im/app/#/room/!NNzHoaSdnsbZDQOXJr:decred.org/$153409911653370oCvhJ:decred.org) PoW algo change proposal must be specified in great detail;  
+project fund [transparency](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153410896753432nExMw:decred.org) and constitution;  
+[thoughts](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153432628255090APtWJ:decred.org) about [NIPoPoWs](https://eprint.iacr.org/2017/963) and SPV;  
+[prerequisites](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153433879355141udYDe:decred.org) for shipping SPV by default ([continued](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$15356464972893wubQn:decred.org));  
+Decred vs Dash treasury and marketing [expenses](https://riot.im/app/#/room/!zxBsqZRxjbQoLqJRwe:decred.org/$153434282455193CVEFR:decred.org), spending other people's money;  
+[why](https://riot.im/app/#/room/!NKtIRqGOEGaZvSQkKl:decred.org/$153453353055716yshds:decred.org) Decred should not invade a country, DAO and nation states, entangling with nation state is poor resource allocation;  
+[how](https://riot.im/app/#/room/!wSdymYrEpBhsWlDJuk:decred.org/$153458242155930Qncyb:decred.org) winning tickets are determined and attack vectors;  
+[Politeia](https://riot.im/app/#/room/!tIDEIWechmqCLjPiui:decred.org/$153455653755840KhCTV:decred.org) proposal moderation, contractor clearance, the scale of proposals and decision delegation, initial Politeia vote to approve Politeia itself;  
+[chat systems](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153478648556684iKADS:decred.org), Matrix/Slack/Discord/RocketChat/Keybase ([continued](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$1535216745397gPsON:zettaport.com));  
+[overview](https://riot.im/app/#/room/!OfChXgczrIlpEZSFAv:decred.org/$153490307657191zOrLq:decred.org) of Korean exchanges;  
+no [breaking changes](https://riot.im/app/#/room/!HEeJkbPRpAqgAwhXWO:decred.org/$153496073957423GaxvC:decred.org) in vgo;  
+[why](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$153496964357581puIAD:decred.org) project fund burn rate must keep low;  
+[asymptotic](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153520054958429Jqwut:decred.org) behavior of Decred and other ccs, tail emission;  
+count of [full nodes](https://riot.im/app/#/room/!MgQoetFiyjrHAywokv:decred.org/$153529715258849rjuSm:decred.org) and incentives to run them;  
+Politeia proposal [translations](https://riot.im/app/#/room/!VFRvyndKpzcLrVslQD:decred.org/$153535615958948fQNVf:decred.org) and multilingual environment;  
+[terminology](https://riot.im/app/#/room/!tfqymymiNgzSUJTHqS:decred.org/$1535386492135ZGULG:decred.org), "staking" vs "voting" and whether changing terms on the website and in the docs worth a Pi vote;  
 
-\#governance is growing and never stops producing high quality conversations.
+An unusual event was the chat about double negatives and other oddities in languages in [#trading](https://riot.im/app/#/room/!zxBsqZRxjbQoLqJRwe:decred.org/$153316263048081XBMww:decred.org).
 
 # Markets
 
