--- a/journal/201808.md
+++ b/journal/201808.md
@@ -36,7 +36,7 @@ The upcoming v3.0 entered beta and is deployed on [beta.dcrdata.org](https://bet
 
 @Richard-Red created a [concept repository](https://github.com/RichardRed0x/governance-docs) with policy documents that should only be changed with voter approval.
 
-[decred.org](https://github.com/decred/dcrweb): [Contributors](https://decred.org/contributors/) and [Exchanges](https://decred.org/exchanges/) pages were updated. Advisors were removed, see reasoning [here](https://github.com/decred/dcrweb/issues/316).
+[decred.org](https://github.com/decred/dcrweb): [Contributors](https://decred.org/contributors/) was updated. Advisors were removed, see reasoning [here](https://github.com/decred/dcrweb/issues/316).
 
 [decredmarketcap.com](https://decredmarketcap.com/) is a brand new website that shows the most accurate DCR market data. Clean design, mobile friendly, no javascript required.
 
@@ -78,7 +78,7 @@ Exchange integrations:
 
 * Australian CoinTree [listed](https://twitter.com/CointreeAus/status/1032887014029316097) DCR {AUD?}. The fees are 0 during the "Early access mode", more in the [blog](https://www.cointree.com/blog/new-coins-added-zcash-siacoin-steem-lisk-digibyte-and-more). On a related note, CoinTree is [working](https://www.cointree.com/blog/bill-payments-feature-coming-soon) on a feature to pay household bills with cryptocurrencies it supports.
 
-{new OTC}
+3 new OTC desks were added to [exchanges](https://decred.org/exchanges/) page at decred.org.
 
 {payment processors, wallets}
 
