--- a/journal/201808.md
+++ b/journal/201808.md
@@ -70,19 +70,16 @@ https://signatureit.org/products/decred-dcr-blake256r14-asic-46th-s-2200w-estima
 
 # Integrations
 
-{new mining and staking pools or news from existing ones}
+One more [stakepool](https://decred.org/stakepools/) this month: [www.d1pool.com](https://www.d1pool.com).
 
-[www.d1pool.com](https://www.d1pool.com) a new [stakepool](https://decred.org/stakepools/)
-
-Exchange integrations:
-
-* Australian CoinTree [listed](https://twitter.com/CointreeAus/status/1032887014029316097) DCR {AUD?}. The fees are 0 during the "Early access mode", more in the [blog](https://www.cointree.com/blog/new-coins-added-zcash-siacoin-steem-lisk-digibyte-and-more). On a related note, CoinTree is [working](https://www.cointree.com/blog/bill-payments-feature-coming-soon) on a feature to pay household bills with cryptocurrencies it supports.
+Australian CoinTree [listed](https://twitter.com/CointreeAus/status/1032887014029316097) DCR {AUD?}. The fees are 0 during the "Early access mode", more in the [blog](https://www.cointree.com/blog/new-coins-added-zcash-siacoin-steem-lisk-digibyte-and-more). On a related note, CoinTree is [working](https://www.cointree.com/blog/bill-payments-feature-coming-soon) on a feature to pay household bills with cryptocurrencies it supports.
 
 3 new OTC desks were added to [exchanges](https://decred.org/exchanges/) page at decred.org.
 
-[Coinomi](https://www.coinomi.com/) [added](https://twitter.com/decredproject/status/1034878463323394050) Decred to their Android and iOS wallets. Check their [downloads](https://www.coinomi.com/downloads/) page (direct APK download and checksums are available). Coinomi [features](https://unblock.net/coinomi-wallet-review/) integrated cryptocurrency exchange and is the first company to offer mobile Decred wallet.
+Two mobile wallets integrated Decred in August:
 
-[BitBill](https://www.bitbill.com/) Android and iOS wallet also [added](https://twitter.com/bitbillwallet/status/1032940076190167040) Decred.
+* [Coinomi](https://www.coinomi.com/) [added](https://twitter.com/decredproject/status/1034878463323394050) Decred to their Android and iOS wallets. Check their [downloads](https://www.coinomi.com/downloads/) page (direct APK download and checksums are available). Coinomi [features](https://unblock.net/coinomi-wallet-review/) integrated cryptocurrency exchange and is the first company to offer mobile Decred wallet.
+* [BitBill](https://www.bitbill.com/) Android and iOS wallet also [added](https://twitter.com/bitbillwallet/status/1032940076190167040) Decred.
 
 As always: do your best to understand the security model before using any wallet software.
 
