--- a/journal/201808.md
+++ b/journal/201808.md
@@ -48,9 +48,7 @@ Hashrate: {}
 
 Staking: {}
 
-Nodes: {}
-
-{any interesting events}
+Nodes: there are 217 public listening and 281 normal nodes per [dcred.eu](https://dcred.eu/nodeStats). Version distribution: 2% at 1.4.0(pre) (dev builds), 5% on v1.3.0 (RC1), 62% on v1.2.0 (-5%), 22% on v1.1.2 (-2%), 6% on v1.1.0 (-1%). Almost 69% of nodes are v.1.2.0 and higher and support client filters. Data snapshot of Aug 31.
 
 Some interesting analysis of the ticket system https://twitter.com/ImacallyouJawdy
 
@@ -81,7 +79,7 @@ Two mobile wallets integrated Decred in August:
 * [Coinomi](https://www.coinomi.com/) [added](https://twitter.com/decredproject/status/1034878463323394050) Decred to their Android and iOS wallets. Check their [downloads](https://www.coinomi.com/downloads/) page (direct APK download and checksums are available). Coinomi [features](https://unblock.net/coinomi-wallet-review/) integrated cryptocurrency exchange and is the first company to offer mobile Decred wallet.
 * [BitBill](https://www.bitbill.com/) Android and iOS wallet also [added](https://twitter.com/bitbillwallet/status/1032940076190167040) Decred.
 
-As always: do your best to understand the security model before using any wallet software.
+As always: do your best to understand the security and privacy model before using any wallet software.
 
 # Adoption
 
@@ -134,7 +132,7 @@ https://stakey.club/en/decrediton-setup/
 
 Decred scored \#32 in the [August issue](https://archive.today/W3cOd) of CCID ratings. The evaluation model was explained in [this interview](https://medium.com/@coinness/coinness-exclusive-interview-with-pu-songtao-discover-ccid-global-public-chain-tech-evaluation-d570af55fd89).
 
-Satis Group rated Decred highly in their cryptoasset valuation [research report](https://www.cryptoglobe.com/latest/2018/08/satis-research-upside-5-year-in-btc-96000-xmr-18000-and-dcr-535-downside-in-bch-268/). ([PDF](https://research.bloomberg.com/pub/res/d37g1yWebn9LbRbS09rquSuSoDQ))
+Satis Group rated Decred highly in their cryptoasset valuation [research report](https://www.cryptoglobe.com/latest/2018/08/satis-research-upside-5-year-in-btc-96000-xmr-18000-and-dcr-535-downside-in-bch-268/) ([PDF](https://research.bloomberg.com/pub/res/d37g1yWebn9LbRbS09rquSuSoDQ)). The story made it to several large media, but some did not link or [omitted](https://www.reddit.com/r/decred/comments/9c4hp8/forbes_online_contributor_might_do_a_write_on/e5bb5n3/) Decred entirely [citing](https://twitter.com/AaronWStanley/status/1035742979619794945) low market cap.
 
 Featured:
 
@@ -165,10 +163,13 @@ Videos:
 
 Community stats:
 
-* Twitter followers {} (+{})
-* Reddit subscribers {} (+{})
-* Slack users {} (+{})
-* GitHub {} stars and {} forks of dcrd repository
+* Twitter followers 39,592 (+174)
+* Reddit subscribers 8,631 (+119)
+* Matrix users 163
+* Slack users 6,067 (+103)
+* YouTube subscribers 3,667
+* Facebook 3,048 followers and 2,814 likes
+* GitHub 417 (+14) stars and 1,021 (+44) forks of dcrd repository
 
 Comm systems news:
 
@@ -176,10 +177,12 @@ Comm systems news:
 * Several impersonators were detected and banned.
 * After yet another debate about chat system several people began testing and using Matrix, leading to some gardening on that platform:
   * Decred Matrix community was created: [+decred:decred.org](https://matrix.to/#/+decred:decred.org), it now helps to locate all Decred-related rooms.
-  * Room avatars were set.
+  * [#privacy](https://riot.im/app/#/room/#privacy:decred.org) and [#design](https://riot.im/app/#/room/#design:decred.org) are now bridged.
+  * Stylish room avatars were set.
 * Inactive Slack channels were archived. Please report to admins any channels you miss.
 * [Mastodon](https://en.wikipedia.org/wiki/Mastodon_%28software%29) was mentioned by several people as a viable alternative for Twitter.
 * Two new Reddit [rules](https://www.reddit.com/r/decred/about/rules/) were added to prevent CAPS flood and duplicate submissions.
+* {twitter manned by group #twitter_ops https://github.com/decred/dcrweb/pull/332}
 
 Highlights:
 
@@ -217,6 +220,8 @@ Vietnam ban mining equipment import https://icobrothers.media/2018/08/14/vietnam
 Medium cc policy https://help.medium.com/hc/en-us/articles/360000646167-Cryptocurrencies-on-Medium triggering one cc project to migrate to ghost https://blog.aragon.org/aragon-against-censorship-goodbye-medium-hello-ghost/
 
 Intel and x86 dumpsterfire [keeps burning](https://marc.info/?l=openbsd-tech&m=153504937925732&w=2) brighter. Seek for more secure hardware and OS for your coins.
+
+https://www.reddit.com/r/btc/comments/8yp6gd/my_newest_a_way_to_perform_p2p_atomic_swaps/ (missed in July issue).
 
 Finally, almost unrelated to Decred but too good to not share: [yetanotherico.com](http://yetanotherico.com/).
 
